--- a/slow-letter/package.json
+++ b/slow-letter/package.json
@@ -14,6 +14,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.3.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@react-three/drei": "^9.23.7",
     "@react-three/fiber": "^8.6.0",
     "@types/node": "18.7.3",
@@ -23,6 +26,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "framer-motion": "^6.5.1",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
     "react-three-fiber": "^6.0.13",
