--- a/slow-letter/package.json
+++ b/slow-letter/package.json
@@ -14,6 +14,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -29,6 +30,7 @@
     "framer-motion": "^6.5.1",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
+    "react-icons": "^4.4.0",
     "react-three-fiber": "^6.0.13",
     "tailwindcss": "^3.1.8",
     "three": "^0.143.0",
