--- a/slow-letter/package.json
+++ b/slow-letter/package.json
@@ -9,11 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
     "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
@@ -25,15 +20,22 @@
     "@types/react-dom": "18.0.6",
     "@types/three": "^0.143.1",
     "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
+    "axios": "^0.27.2",
     "framer-motion": "^6.5.1",
+    "next": "12.2.5",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-three-fiber": "^6.0.13",
     "tailwindcss": "^3.1.8",
     "three": "^0.143.0",
-    "typescript": "4.7.4"
+    "typescript": "4.7.4",
+    "zustand": "^4.1.1"
+  },
+  "devDependencies": {
+    "eslint": "8.22.0",
+    "eslint-config-next": "12.2.5"
   }
 }
