--- a/slow-letter/package.json
+++ b/slow-letter/package.json
@@ -9,14 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "framer-motion": "^7.2.1",
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@chakra-ui/icons": "^2.0.9",
     "@react-three/drei": "^9.23.7",
     "@react-three/fiber": "^8.6.0",
     "@types/node": "18.7.3",
@@ -26,8 +22,14 @@
     "@types/three": "^0.143.1",
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
+    "framer-motion": "^7.2.1",
+    "next": "12.2.5",
+    "next-cookies": "^2.0.3",
     "next-transpile-modules": "^9.0.0",
     "postcss": "^8.4.16",
+    "react": "18.2.0",
+    "react-cookie": "^4.1.1",
+    "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-three-fiber": "^6.0.13",
     "tailwindcss": "^3.1.8",
@@ -35,7 +37,6 @@
     "typescript": "4.7.4",
     "zustand": "^4.1.1"
   },
-
   "devDependencies": {
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5"
