--- a/slow-letter/package.json
+++ b/slow-letter/package.json
@@ -23,6 +23,8 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "next": "12.2.5",
     "next-cookies": "^2.0.3",
     "next-transpile-modules": "^9.0.0",
